# liars-poker-rnad

./: .gitignore  Makefile  README.md  config.yaml  config_br.yaml  config_play_agents.yaml  config_play_interactive.yaml  pyproject.toml  requirements.txt
data/: best_response_results.csv  human_eval.csv
src/: baseline.py  best_response_rl_multiplayer.py  config_schema.py  llm_inputs.py  play_agents.py  play_interactive.py  setup_logs.py  train.py  utils.py
src/best_response_output/: __init__.py
